# ai-platform

./: .env  .gitignore  LICENSE  Makefile  README.md  dnsmasq.conf.template  registry.yaml
.kube/: config
helm/auth-test/: Chart.yaml  values.yaml
helm/auth-test/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  virtualservice.yaml
helm/capsule/: Chart.yaml
helm/hami/: Chart.yaml
helm/istio/: README.md
helm/istio/ai-platform-gateway/: Chart.yaml
helm/istio/platform-gateway/: Chart.yaml  values.yaml
helm/istio/runway-gateway/: Chart.yaml  values.yaml
helm/openmetadata/: Chart.yaml
helm/seaweedfs-csi-driver/: Chart.yaml
manifests/: airflow-config.yaml  airflow-vs.yaml  gitea-vs.yaml  k8s-oidc-clusterrolebinding.yaml  k8s-oidc-role.yaml  keycloak-vs.yaml  kubeconfig-capsule.yaml  kubeconfig.yaml  kubernetes-oidc-project-rolebinding.yaml  kubernetes-oidc-project-roles.yaml  openmetadata-vs.yaml  opensearch-vs.yaml  seaweedfs-config.yaml  virtualservice.yaml
manifests/capsule/: clusterrole.yaml  clusterrolebinding.yaml  resourcepool.yaml  resourcepoolclaim.yaml  tenant.yaml  workspace-member-clusterrole.yaml
scripts/: ai-platform.server  coredns-custom.sh  gitea.sh  keycloak.sh  kubernetes.sh  token.sh
src/auth-test/: Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/gpu-pool/: Dockerfile  Makefile  README.md  deployment.yaml  fix-webhook.sh  go.mod  go.sum  gpu-pool-webhook.go  kai-gpu-pool-webhook.go  main.go  patch-operation.go  test-examples.yaml  webhook-config.yaml  webhook.go
(+13 files in other folders)
